--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,12 @@
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/enviroment.ts",
+                  "with": "src/environments/enviroment.prod.ts"
+                }
+              ],
               "budgets": [
                 {
                   "type": "initial",
