Feat: Update Vercel configuration to enable deployment on master branch, specify Angular framework, and define build command and output directory for improved deployment process.

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
     "rewrites": [
       { "source": "/(.*)", "destination": "/index.html" }
-    ]
+    ],
+    "git": {
+      "deploymentEnabled": {
+        "master": true
+      }
+    },
+    "framework": "angular",
+    "buildCommand": "ng build",
+    "outputDirectory": "dist/CineScope"
   }
