Feat: Add ignoreCommand to Vercel configuration to prevent deployments on non-master branches for better control over deployment process.

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,7 @@
         "master": true
       }
     },
+    "ignoreCommand": "[ \"$VERCEL_GIT_COMMIT_REF\" != \"master\" ]",
     "framework": "angular",
     "buildCommand": "ng build",
     "outputDirectory": "dist/CineScope"
