Refactor: Update Angular and Vercel configurations to remove server entry point and adjust output directory for streamlined deployment process.

--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,5 @@
     "ignoreCommand": "[ \"$VERCEL_GIT_COMMIT_REF\" != \"master\" ]",
     "framework": "angular",
     "buildCommand": "ng build",
-    "outputDirectory": "dist/CineScope"
+    "outputDirectory": "dist/CineScope/browser"
   }
