--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/ssr": "^20.3.10",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
+    "swiper": "^12.0.3",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
